# delphi-build-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  QUICKSTART.md  README.md  delphi_config.toml.template  main.py  pyproject.toml  start_mcp_server.bat  test_http_transport.bat  test_http_transport.sh  test_stdio_wsl.sh
docs/: DESIGN-extend-config.md
docs/plans/: 2026-02-02-streamable-http-transport.md  2026-02-14-resource-compilation-design.md  2026-02-14-resource-compilation-plan.md  2026-03-05-android-compilation-design.md  2026-03-05-android-compilation-plan.md
docs/superpowers/plans/: 2026-03-11-msbuild-hybrid-compilation.md
docs/superpowers/specs/: 2026-03-11-msbuild-hybrid-compilation-design.md
src/: __init__.py  buildlog_parser.py  compiler.py  config.py  config_extender.py  config_generator.py  dproj_parser.py  models.py  msbuild_compiler.py  msbuild_output_parser.py  multi_config_generator.py  output_parser.py  path_utils.py  registry_parser.py  resource_compiler.py  rsvars_parser.py
tests/: __init__.py  test_android_buildlog.py  test_android_models.py  test_buildlog_resource.py  test_config_extender.py  test_config_extender_windows.py  test_config_generator_minimal.py  test_config_generic_fallback.py  test_dproj_version_info.py  test_models_minimal_config.py  test_msbuild_compiler.py  test_msbuild_output_parser.py  test_multi_config_windows.py  test_path_utils.py  test_platform_config.py  test_resource_compiler.py  test_resource_models.py  test_routing.py  test_rsvars_parser.py
